# tensorflow-classifier-android

./: .gitignore  README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: imageutils_jni.cc
app/src/main/java/org/tensorflow/demo/: AutoFitTextureView.java  CameraActivity.java  CameraConnectionFragment.java  Classifier.java  ClassifierActivity.java  LegacyCameraConnectionFragment.java  OverlayView.java  RecognitionScoreView.java  ResultsView.java  TensorFlowImageClassifier.java
app/src/main/java/org/tensorflow/demo/env/: BorderedText.java  ImageUtils.java  Logger.java
app/src/main/res/layout/: camera_connection_fragment.xml
app/src/main/res/values/: base-strings.xml
gradle/wrapper/: gradle-wrapper.properties
